Fixed credit icon not showing up properly

--- a/styles.css
+++ b/styles.css
@@ -584,10 +584,10 @@ input:focus {
 }
 
 [data-tooltip]:not(a, button, input, [role=button]) {
-    height: fit-content;
-    border-bottom: none;
-    text-decoration: none;
-    cursor: help;
-    font-size: 16px;
-    color: #9486E1;
+    height: fit-content !important;
+    border-bottom: none !important;
+    text-decoration: none !important;
+    cursor: help !important;
+    font-size: 16px !important;
+    color: #9486E1 !important;
 }
